--- a/src/app/components/add-tutorial/add-tutorial.component.html
+++ b/src/app/components/add-tutorial/add-tutorial.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="form-group">
-      <label for="description">Description</label>
+      <label for="description">Descrição</label>
       <input
         class="form-control"
         id="description"
