--- a/src/app/components/add-tutorial/add-tutorial.component.html
+++ b/src/app/components/add-tutorial/add-tutorial.component.html
@@ -23,81 +23,88 @@
       />
     </div>
 
-<div class="form-group">
-  <label for="description">CEP</label>
-  <input
-    class="form-control"
-    id="description"
-    required
-    [(ngModel)]="tutorial.cep"
-    (input)="tutorial.cep && consultaCep(tutorial.cep)"
-    name="description"
-    mask="00000-000"
-    placeholder="Digite o CEP"
-    maxlength="8"
-  />
-</div>
-<div class="form-group">
-  <label for="description">Rua</label>
-  <input
-    class="form-control"
-    id="description"
-    required
-    [(ngModel)]="tutorial.rua"
-    name="description"
-    placeholder="Digite a rua"
-    maxlength="9"
-  />
-</div>
-<div class="form-group">
-  <label for="estado">Estado</label>
-  <select class="form-control" id="estado" name="estado" [(ngModel)]="tutorial.estado">
-    <option value="" disabled selected hidden>Selecione o estado</option>
-    <option value="AC">AC</option>
-    <option value="AL">AL</option>
-    <option value="AM">AM</option>
-    <option value="AP">AP</option>
-    <option value="BA">BA</option>
-    <option value="CE">CE</option>
-    <option value="DF">DF</option>
-    <option value="ES">ES</option>
-    <option value="GO">GO</option>
-    <option value="MA">MA</option>
-    <option value="MG">MG</option>
-    <option value="MS">MS</option>
-    <option value="MT">MT</option>
-    <option value="PA">PA</option>
-    <option value="PB">PB</option>
-    <option value="PE">PE</option>
-    <option value="PI">PI</option>
-    <option value="PR">PR</option>
-    <option value="RJ">RJ</option>
-    <option value="RN">RN</option>
-    <option value="RO">RO</option>
-    <option value="RR">RR</option>
-    <option value="RS">RS</option>
-    <option value="SC">SC</option>
-    <option value="SE">SE</option>
-    <option value="SP">SP</option>
-    <option value="TO">TO</option>
-  </select>
-</div>
-<div class="form-group">
-  <label for="description">Cidade</label>
-  <input
-    class="form-control"
-    id="description"
-    required
-    [(ngModel)]="tutorial.cidade"
-    name="description"
-    placeholder="Digite a cidade"
-    maxlength="50"
-  />
-</div>
+    <div class="form-group">
+      <label for="description">CEP</label>
+      <input
+        class="form-control"
+        id="description"
+        required
+        [(ngModel)]="tutorial.cep"
+        (input)="consultaCep(tutorial.cep)"
+        (blur)="updateCepCaracters(tutorial.cep)"
+        name="description"
+        mask="00000-000"
+        placeholder="Digite o CEP"
+        maxlength="8"
+      />
+      <div *ngIf="CepCaracters" class="alert alert-danger">
+        Tem que ter 8 dígitos
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="description">Rua</label>
+      <input
+        class="form-control"
+        id="description"
+        required
+        [(ngModel)]="tutorial.rua"
+        name="description"
+        placeholder="Digite a rua"
+        maxlength="9"
+      />
+    </div>
+    <div class="form-group">
+      <label for="estado">Estado</label>
+      <select
+        class="form-control"
+        id="estado"
+        name="estado"
+        [(ngModel)]="tutorial.estado"
+      >
+        <option value="" disabled selected hidden>Selecione o estado</option>
+        <option value="AC">AC</option>
+        <option value="AL">AL</option>
+        <option value="AM">AM</option>
+        <option value="AP">AP</option>
+        <option value="BA">BA</option>
+        <option value="CE">CE</option>
+        <option value="DF">DF</option>
+        <option value="ES">ES</option>
+        <option value="GO">GO</option>
+        <option value="MA">MA</option>
+        <option value="MG">MG</option>
+        <option value="MS">MS</option>
+        <option value="MT">MT</option>
+        <option value="PA">PA</option>
+        <option value="PB">PB</option>
+        <option value="PE">PE</option>
+        <option value="PI">PI</option>
+        <option value="PR">PR</option>
+        <option value="RJ">RJ</option>
+        <option value="RN">RN</option>
+        <option value="RO">RO</option>
+        <option value="RR">RR</option>
+        <option value="RS">RS</option>
+        <option value="SC">SC</option>
+        <option value="SE">SE</option>
+        <option value="SP">SP</option>
+        <option value="TO">TO</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="description">Cidade</label>
+      <input
+        class="form-control"
+        id="description"
+        required
+        [(ngModel)]="tutorial.cidade"
+        name="description"
+        placeholder="Digite a cidade"
+        maxlength="50"
+      />
+    </div>
     <button (click)="saveTutorial()" class="btn btn-success">Submit</button>
-    
   </div>
-
 
   <div *ngIf="submitted">
     <h4>You submitted successfully!</h4>
