--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
+  <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="loginService.isAuthenticated">
     <a href="#" class="navbar-brand">Codigan</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
